# ToDoList-main

./: .env  .env.example  .gitignore   alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: README  env.py
alembic/versions/: d56952769e7a_initial_schema.py
app/: main.py
app/api/: dependencies.py  routers.py
app/api/controller_schemas/: project_request_schema.py  project_response_schema.py  task_request_schema.py  task_response_schema.py
app/api/controllers/: project_controller.py  task_controller.py
cli/: __init__.py  menu.py  project_cli.py  task_cli.py
commands/: close_overdue_tasks.py
core/: __init__.py  config.py  create_tables.py  database.py  project.py  task.py  todo_manager.py
core/database/: config.py  session.py
core/models/: project.py  task.py
core/repositories/: project_repository.py  task_repository.py
core/services/: todo_manager.py  validators.py
